tests/ui_unstable/dir_include_wch.rs
use wchar::{include_wch, wchar_t};

const DIR: &[wchar_t] = include_wch!("../data");

fn main() {}
